# google_maps_reviews_scraper

./: LICENSE  README.md  pyproject.toml  sample_urls.txt  serp_scraper.py
