[tool.poetry]
name = "google_maps_reviews_scraper"
version = "0.1.0"
description = ""
authors = ["engkimo <dailyrandor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-search-results = "^2.4.2"
autopep8 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
